# sdrtrunk-rdio-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  cli.py  config.example.yaml  coverage.xml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.md  question.yml
.github/workflows/: advanced-ci.yml  ci-cd.yml  ci.yml  lint.yml  release.yml  security.yml  test-linux.yml  test-macos.yml  test-windows.yml
config/: config.example.yaml
docs/: API.md  GETTING_STARTED.md  whisperx-integration-plan.md
scripts/: check_docs.py  clean.py  docker-compose.yml  test_upload.py
src/: __init__.py  config.py  exceptions.py
src/api/: __init__.py  app.py  query.py  rdioscanner.py
src/database/: __init__.py  connection.py  operations.py
src/middleware/: __init__.py  rate_limiter.py  security.py  validation.py
src/models/: __init__.py  api_models.py  database_models.py
src/utils/: __init__.py  file_handler.py  multipart_parser.py
tests/: conftest.py  test_api.py  test_database.py  test_integration.py  test_middleware.py  test_performance.py  test_query_api.py  test_utils.py
